--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,23 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="index.css">
+</head>
+<body>
+  <div class="header"></div>
+  <div class="flexcontainer">
+    <div class="flexblock1"></div>
+    <div class="flexblock2">
+      <div class="footer"></div>
+    </div>
+    <div class="flexblock3"></div>
+  </div>
+</body>
+</html>
