added semantic html tags for header/footer

--- a/first/index.html
+++ b/first/index.html
@@ -11,11 +11,11 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <div class="header"></div>
+  <header class="header"></header>
   <div class="flexcontainer">
     <div class="flexblock1"></div>
     <div class="flexblock2">
-      <div class="footer"></div>
+      <footer></footer>
     </div>
     <div class="flexblock3"></div>
   </div>
