Second Assignment Complete

--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,31 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Second</title>
+  <link rel="stylesheet" href="index.css">
+</head>
+<body>
+
+  <div class="block1">
+    <div class="purpbox"></div>
+    <div class="greenbox"></div>
+    <div class="bluecircle"></div>
+
+  </div>
+  <div class="block2">
+    <div class="contentbox"></div>
+  </div>
+  <div class="block3">
+    <div class="softbox">
+      <h1>HELLO</h1><br>
+      <h1>FRIENDS</h1>
+    </div>
+  </div>
+  
+</body>
+</html>
