Working Third Assignment

--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,24 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Third</title>
+  <link rel="stylesheet" href="index.css">
+</head>
+<body>
+  <div class="flexcontainer">
+    <div class="cbars bar1">
+      <div class ="lbox"></div>
+    </div>
+    <div class="contentbar"></div>
+    <div class="cbars" style="background-color: blue;"></div>
+    <div class="cbars" style="background-color: aquamarine;"></div>
+    <div class="cbars" style="background-color: chartreuse;"></div>
+    <div class="cbars" style="background-color: yellow;"></div>
+  </div>
+  
+</body>
+</html>
