--- a/third/index.html
+++ b/third/index.html
@@ -13,7 +13,11 @@
     <div class="cbars bar1">
       <div class ="lbox"></div>
     </div>
-    <div class="contentbar"></div>
+    <div class="contentbar">
+      <span class="textholder">
+        Consider hiding the status bar -- and all other app UI -- while people are actively viewing full-screen media. If you hide the status bar, be sure to let people retrieve it ( and the appropriate app UI ) with a single tap. Unless you have a compelling reason to do so, avoid defining a custom gesture to redisplay the status bar because users are unlikely to discover such a gesture or to remember it.
+      </span>
+    </div>
     <div class="cbars" style="background-color: blue;"></div>
     <div class="cbars" style="background-color: aquamarine;"></div>
     <div class="cbars" style="background-color: chartreuse;"></div>
